<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bar</name>
  <version>0.0.1</version>
  <description>bar</description>
  <maintainer email="marc.testier@hopetechnik.com">marctestier</maintainer>
  <license>Apache License 2.0</license>

  <author>Marc-Antoine Testier</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>foo</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
