<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foo</name>
  <version>0.0.1</version>
  <description>Some test</description>
  <maintainer email="marc.testier@hopetechnik.com">marctestier</maintainer>
  <license>Apache License 2.0</license>

  <author>Marc-Antoine Testier</author>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
